--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "framer",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsup",
@@ -7,7 +10,9 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "tsup": "^6.5.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
-    "vitest": "^0.26.3",
+    "vitest": "^0.26.3"
   }
+}
