--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
     "vitest": "^0.26.3"
+  },
+  "dependencies": {
+    "two.js": "^0.8.10"
   }
 }
