--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "prettier": "^2.8.2",
     "tsup": "^6.5.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.12",
